--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Custom stuff
+zombie_game.vcxproj
+
 # User-specific files
 *.rsuser
 *.suo
