--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # Custom stuff
-zombie_game.vcxproj
+zombie_game/zombie_game.vcxproj
 
 # User-specific files
 *.rsuser
