--- a/zombie_game/zombie_game.vcxproj.filters
+++ b/zombie_game/zombie_game.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="Zombie.cpp">
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Source Files\Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -83,6 +86,9 @@
       <Filter>Header Files\Entity</Filter>
     </ClInclude>
     <ClInclude Include="Zombie.h">
+      <Filter>Header Files\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
       <Filter>Header Files\Entity</Filter>
     </ClInclude>
   </ItemGroup>
