--- a/zombie_game/zombie_game.vcxproj
+++ b/zombie_game/zombie_game.vcxproj
@@ -46,7 +46,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>legacy_stdio_definitions.lib;sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;sfml-audio-s-d.lib;vorbisfile.lib;vorbisenc.lib;opengl32.lib;openal32.lib;freetype.lib;vorbis.lib;ws2_32.lib;winmm.lib;gdi32.lib;flac.lib;ogg.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-s-d.lib;sfml-window-s-d.lib;sfml-system-s-d.lib;sfml-audio-s-d.lib;sfml-main-d.lib;vorbisfile.lib;vorbisenc.lib;opengl32.lib;openal32.lib;freetype.lib;vorbis.lib;ws2_32.lib;winmm.lib;flac.lib;ogg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y "$(SolutionDir)libs\sfml-2.5.1\extlib\openal32.dll" "$(OutDir)"</Command>
